# OpenGL_project

./: CMakeLists.txt  run.sh
include/: Camera.h  Mesh.h  ShaderProgram.h  Texture2D.h  main.h
src/: Camera.cpp  Mesh.cpp  ShaderProgram.cpp  Texture2D.cpp  basic.frag  basic.vert  lighting.frag  lighting.vert  lighting2.vert  main.cpp
